# -*- autoconf -*- vim: filetype=config
# configure.ac for MSYS/Cygwin lpr-enhanced package.
#
# Written by Keith Marshall  <keithmarshall@users.sourceforge.net>
# Hereby donated to the public domain.
#
# This is free software.  It is provided `as is', in the hope that it
# may be useful.  There is NO WARRANTY of ANY KIND; not even an implied
# warranty of MERCHANTABILITY, nor of FITNESS for ANY PARTICULAR PURPOSE.
# At no time will the author accept liability for damages, however caused,
# resulting from the use of this software.

m4_define([MINGW_AC_BUG_TRACKER],
[http://sourceforge.net/tracker/?group_id=2435&atid=102435]dnl
)

AC_INIT([lpr-enhanced], [1.0.2], [MINGW_AC_BUG_TRACKER])

AC_PROG_INSTALL
AC_PROG_MKDIR_P
AC_PROG_LN_S

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

# configure.ac: end of file
