# configure.ac for MinGW `portmaker'
# Created: 2006-06-14 by Keith Marshall <keithmarshall@users.sf.net>
#
# Public domain: this file is part of the MinGW portmaker package;
# it is published, without copyright restriction.
#
# This package is provided `as is', WITHOUT WARRANTY OF ANY KIND,
# not even any implied warranty of merchantability, nor of fitness
# for any purpose.
#
# Process this file with autoconf, to produce a configure script.

AC_PREREQ([2.59])

# Autoconf initialisation.
# Parameters for AC_INIT are obtained from version.m4, via aclocal.m4.
#
AC_INIT([PM_PACKAGE_NAME],[PM_PACKAGE_VERSION],[PM_BUGREPORT_URI])
AC_CONFIG_SRCDIR([src/portmaker.sh])

# Generate Makefiles.
#
AC_CONFIG_FILES([Makefile src/Makefile lib/Makefile])
AC_CONFIG_FILES([doc/Makefile template/Makefile])
AC_OUTPUT

# $RCSfile: configure.ac,v $: end of file
