dnl Process this file with autoconf to produce a configure script.

AC_INIT(Makefile.am)
AM_INIT_AUTOMAKE(mingw-utils, 0.1)

AC_PROG_CC
AM_PROG_CC_STDC
AM_PROG_LEX
AC_PROG_YACC
#AC_LIBTOOL_WIN32_DLL
#AC_PROG_LIBTOOL

AC_CYGWIN
AC_MINGW32

AC_EXEEXT
AC_OBJEXT

AC_OUTPUT([
Makefile
dos2unix/Makefile
drmingw/Makefile
pexports/Makefile
redir/Makefile
reimp/Makefile
scripts/Makefile
unix2dos/Makefile
])
