# Process this file with autoconf 2.53 or better to produce a configure script.

AC_INIT(msys-here,0.1a)
AC_PREREQ(2.53)
AM_INIT_AUTOMAKE(1.6 no-define)
AC_CONFIG_SRCDIR(Makefile.am)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_RANLIB

AC_ARG_VAR(WINDRES, [Windows Resource compiler tool path])
AC_PATH_TOOL(WINDRES,windres,
	[AC_MSG_WARN(Could not find a windres tool in your PATH. Will not be able to compile msys-here.)]
)
AC_SUBST(WINDRES)

AC_CONFIG_FILES([
Makefile
lib/Makefile
src/Makefile
winui/Makefile
])
AC_OUTPUT
